# waap

./: .env.sample  .gitignore  .mypi.ini  .pre-commit-config.yaml  README.md  docker-compose.yml  logconf.ini  pyproject.toml  pytest.ini
.github/: dependabot.yml
.github/workflows/: dependabot-automerge.yml
concierge/: Dockerfile  main.py
concierge/model/: backend_status_type.py
config/mmock/: delay15s_get.json  delay5s_get.json  delay5s_post.json  delay8m35s_get.json
for_developper/: docker-compose.yml
handler/: Dockerfile  main.py
handler/model/: item.py
tests/: conftest.py  test_concierge.py  test_handler.py  test_worker.py
waap/concierge/: Dockerfile  main.py
waap/handler/: Dockerfile  logconf.ini  main.py
waap/middleware/: conten_type_validation_middleware.py
waap/worker/: Dockerfile  logconf.ini  main.py
