[tool.poetry]
name = "waap"
version = "0.1.0"
description = ""
authors = ["Tadashi Takahashi <ttakahashi@umn.co.jp>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "==3.12.2"
fastapi = "==0.109.2"
uvicorn = "==0.29.0"
pydantic = "==2.6.1"
schedule = "==1.2.1"
requests = "^2.31.0"
boto3 = "^1.34.49"
types-requests = "^2.31.0.20240125"
dynamodb = "^1.0.0"
pytest = "^8.0.2"
httpx = "^0.27.0"
moto = "^5.0.2"
pytest-asyncio = "^0.23.6"
asyncio = "^3.4.3"


[tool.poetry.group.dev.dependencies]
pre-commit = "==3.7.0"
mypy = "==1.8.0"
black = "==24.3.0"
isort = "==5.13.2"
flake8 = "==7.0.0"
pytest-asyncio = "^0.23.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "auto"
